<resources>
    <string name="app_name" translatable="false">My Surveys</string>
    <string name="facebook_app_id" translatable="false">1830580473618949</string>
    <string name="google_map_api_key" translatable="false">AIzaSyBqk-WXQspzd-8dbbgnUZ_Q4dH6tOXMoSs</string>
    <string name="server_client_id" translatable="false">913162180312-fp8uakrmkqjh0un3truq3caa1vljduug.apps.googleusercontent.com</string>
    <string name="sign_in_facebook">Login with Facebook</string>
    <string name="sign_in_google_plus">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_ur_password">Forgot your password?</string>
    <string name="invalid_credential">Invalid credentials</string>
    <string name="unauthorised_login">Unauthorised login</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="can_not_sign_in">Can\'t sign in,Try again</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="hint_username">Username / Email ID</string>
    <string name="hint_password">Password</string>
    <string name="title_forgot_password_dialog">Please enter your Email ID.</string>
    <string name="hint_email_id">Email ID</string>
    <string name="err_username_msg">Username cannot be empty</string>
    <string name="err_password_msg">Password cannot be empty!</string>
    <string name="err_invalid_email_id">Please enter a valid e-mail ID.</string>
    <string name="err_empty_email_id">Please enter your Email ID</string>
    <string name="msg_success_mail">"Success!  Please check your e-mail for new password! "</string>
    <string name="unknown_error">Oops! unknown error. Please try again</string>
    <string name="survey_status_new">New</string>
    <string name="survey_status_pending">Pending</string>
    <string name="survey_status_completed">Completed</string>
    <string name="survey_status_download">Download</string>
    <string name="survey_status_downloading">Downloading</string>
    <string name="upload_results">Upload Results</string>
    <string name="survey_status_uploading">Uploading</string>
    <string name="no_survey">No surveys available for the selected panel </string>
    <string name="by_list">By List</string>
    <string name="by_location">By Location</string>
    <string name="survey_name_dummy">Survey Name</string>
    <string name="enable_geo_location">To take location based surveys turn on \'Geolocation\' from the App settings</string>
    <string name="enter_survey_location">"You just entered the survey location - "</string>
    <string name="geofence_survey_panel_error">Selected survey is not under current Panel. Please change the panel to take survey!</string>
    <string name="welcome_message_survey">Welcome! You have a survey here!</string>
    <string name="survey_range_error">You are not in this location to take the survey!</string>
    <string name="zero_str" translatable="false">0</string>
    <string name="take_trial">Take a Trial </string>
    <string name="approx_time">Approximately</string>
    <string name="min_time">min</string>
    <string name="nooftimtak_str">Surveys to upload</string>
    <string name="unscheduled_str">Unscheduled</string>
    <string name="no_surveys_msg">No surveys found</string>
    <string name="surveys_downloading">Downloading surveys.Please wait!</string>
    <string name="notification">Notifications</string>
    <string name="delete">Delete</string>
    <string name="msg_no_notification">No Notifications so far.</string>
    <string name="title_settings">Settings</string>
    <string name="change_panel">Change Panel</string>
    <string name="geo_location">Geo location</string>
    <string name="change_password">Change Password</string>
    <string name="privacy">Privacy</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="about_us">About Us</string>
    <string name="version">Version</string>
    <string name="current_panel">Current Panel</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="err_empty_pwd">Password cannot be empty</string>
    <string name="err_new_and_confirm_pwd_not_same">New and Confirm passwords should be same</string>
    <string name="err_old_and_new_pwd_same">Old and new passwords cannot be same</string>
    <string name="forgot_password_title">We will email you a link to reset your password</string>
    <string name="current_password_does_not_exist">Current Password does not exist</string>
    <string name="profile">Profile</string>
    <string name="title_edit_profile">Edit</string>
    <string name="title_save_profile">Save</string>
    <string name="logout">Log out</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_message_with_results">Please upload offline results before logout</string>
    <string name="title_country_page">Country</string>
    <string name="hint_name">Name</string>
    <string name="err_name_msg">Name is empty</string>
    <string name="err_no_internet">No internet connection.Please try again!</string>
    <string name="err_upload_failed">Failed to upload picture.</string>
    <string name="err_failed_to_load_profile_pic">Failed to load profile picture.</string>
    <string name="title_select_photo">Profile Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="email_id_not_exist">E-mail Id does not exist</string>
    <string name="enter_your_email_id">Please enter your e-mail ID</string>
    <string name="email_id_not_found">E-mail Id not found</string>
    <string name="required_error_msg">This field is required.</string>
    <string name="loading_survey">Loading Survey...</string>
    <string name="no_network_msg">No internet connection.Please try again!</string>
    <string name="okay">OK</string>
    <string name="sync_msg">Sync in progress. Please wait!</string>
    <string name="please_wait">Please wait.</string>
    <string name="update_google_play_service">Update Google Play Services to get location based surveys </string>
    <string name="update">Update</string>
    <string name="runtime_permission">Your permission required.</string>
    <string name="storage_permission">This lets My Surveys to download and store the offline surveys.</string>
    <string name="camera_permission">This lets you use camera inside of My Surveys.</string>
    <string name="gallery_permission">This lets My Surveys to store and access information like photos on your phone and it\\\'s SD Card.</string>
    <string name="location_permission">"My Surveys App would like to access your location to trigger location based surveys. "</string>
    <string name="allow">allow</string>
    <string name="storage_permission_msg">Requires storage permissions to take the survey.As the survey needs to access the files, photos etc.</string>
    <string name="access_permission_msg">Requires storage permissions to access the files, photos ,videos etc.</string>
    <string name="location_permission_msg">Requires location permission to access the location.</string>
    <string name="camera_permission_msg">Requires camera permission to capture an image.</string>
    <string name="audio_permission_msg">Requires record audio permission to record the audio.</string>
    <string name="record_permission_msg">Requires camera and audio permissions to record the video.</string>
    <string name="app_settings">App Settings</string>
    <string name="activate_storage_msg">Activate storage under the permissions menu.</string>
    <string name="deny">Deny</string>
    <string name="gps_network_not_enabled">Location services not enabled.Please enable it.</string>
    <string name="open_location_settings">Location Settings</string>
    <string name="welcome_to">Welcome to</string>
    <string name="geofence_noti_msg">You have survey available at this location</string>
    <string name="survey_available">You have survey available.</string>
    <string name="thank_you_for_visiting">Thank You for visiting</string>
    <string name="take_survey">Take Survey</string>
    <string name="no_surveys_results">Please take the survey before uploading results</string>
    <string name="uploading_survey_result">Uploading Offline Survey results</string>
    <string name="err_uploading_survey_result">Uploading Survey Results.Please wait</string>
    <string name="err_upload_survey_failed">Results upload failed</string>
    <string name="success_results_uploaded">Results are Uploaded</string>
    <string name="reason_str" >Reason:</string>
    <string name="session_expired_login_again">Session expired. Please login again</string>
    <string name="clear">Clear</string>
    <string name="sign_here_title">Please sign here</string>
    <string name="title_activity_signature">Signature</string>
    <string name="title_activity_currency">Currency</string>
    <string name="default_currency_value" translatable="false">0.00</string>
    <string name="ok_str">OK</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Requires camera permission to capture an image.</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="low_storage_error">OCR dependencies cannot be downloaded due to low device storage</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error"> "Error reading text: %1$s"</string>
    <string name="ocr_capture_msg">Tap to capture. Pinch/Stretch to zoom</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="remove">Remove</string>
    <string name="upload_count_str" >Surveys to upload</string>
    <string name="load_survey_err" >An error occurred while loading the survey</string>
    <string name="deeplinkurl_err">Failed to load the request</string>
    <string name="changepwd_unknown_err">An error occurred while changing the password</string>
    <string name="upd_prf_unknown_err">An error occurred while updating the profile</string>
    <string name="upd_prf_img_err">An error occurred while updating the profile picture</string>
    <string name="prf_img_path_err">The image is not found</string>
    <string name="frgt_pwd_unknown_err">An error occurred while trying to send an email to reset the password</string>
    <string name="login_unknown_err">Authentication Failed. Please try again</string>
</resources>