<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tv_title_change_pwd"
            style="@style/tv_title_panel_style"
            android:text="@string/change_password"
            />

        <TextView
            android:id="@+id/tv_email_id"
            style="@style/tv_email_id_style"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_old_password_text"
            style="@style/password_input_layout_style">
            <EditText
                android:id="@+id/et_old_password"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                style="@style/et_old_password_style" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_new_password_text"
            android:layout_centerInParent="true"
            style="@style/password_input_layout_style">
            <EditText
                android:hint="@string/new_password"
                android:inputType="textPassword"
                style="@style/et_old_password_style"
                android:id="@+id/et_new_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_centerInParent="true"
            android:id="@+id/input_layout_confirm_password_text"
            style="@style/password_input_layout_style">
            <EditText
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:id="@+id/et_confirm_password"
                style="@style/et_old_password_style"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/change_pwd_btn_layout">

            <Button
                android:id="@+id/btn_confirm_change_password"
                style="@style/btn_confirm_change_password_style"/>

            <Button
                android:id="@+id/btn_cancel_change_password"
                style="@style/btn_cancel_change_password_style" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>